--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,4 +13,5 @@ bindings = [
 [build]
 command = "npm run build"
 [build.upload]
-format = "service-worker"
+format = "modules"
+main = "./index.mjs"
